--- a/assets/css/app/ui.css
+++ b/assets/css/app/ui.css
@@ -6,9 +6,45 @@ header, main, footer {
 }
 
 header {
-  margin-bottom:1em;
+  margin-bottom:4em;
 }
 footer {
   margin-top:1em;
   text-align: center;
+}
+
+.fleche-droite::before {
+  content:"";
+  position: absolute;
+  top:45%;
+  right:-16px;
+  border-radius:25%;
+  border-width:8px 6px 0 6px;
+  border-style:solid;
+  border-color: white transparent transparent transparent;
+}
+
+/* -------- HEADER ---------- */
+
+header div#main-menu-user {
+  position:absolute;
+  left:calc(-160px - 2em);
+  padding:1em;
+  background-color: var(--maintheme-light);
+  border: 1.5px solid var(--maintheme-dark);
+  border-radius:12px 0 12px 12px;
+  box-shadow: 5px 5px 25px 0px grey;
+}
+
+header div#main-menu-user a {
+  display: block;
+  width: 200px;
+  background:transparent;
+}
+header div#main-menu-user a:not(:last-child) {
+  padding-bottom:8px;
+  border-bottom:1px solid white;
+}
+header div#main-menu-user a:not(:first-child) {
+  margin-top:8px;
 }
