--- a/assets/css/app/ui.css
+++ b/assets/css/app/ui.css
@@ -5,9 +5,6 @@ header, main, footer {
   display:block;
 }
 
-header {
-  margin-bottom:4em;
-}
 footer {
   margin-top:1em;
   text-align: center;
@@ -26,11 +23,21 @@ footer {
 
 /* -------- HEADER ---------- */
 
+header {
+  margin-bottom:4em;
+}
+
+header span#app-name {
+  font-size: 26pt;
+  color: var(--maintheme-rozy)!important;
+}
+
 header div#main-menu-user {
   position:absolute;
   left:calc(-160px - 2em);
   padding:1em;
-  background-color: var(--maintheme-light);
+  background-color: var(--maintheme-rozy);
+  color: var(--maintheme-dark);
   border: 1.5px solid var(--maintheme-dark);
   border-radius:12px 0 12px 12px;
   box-shadow: 5px 5px 25px 0px grey;
