Ajout (laborieux) du traitement des langues

--- a/lib/tasker_web/components/layouts/root.html.heex
+++ b/lib/tasker_web/components/layouts/root.html.heex
@@ -49,7 +49,7 @@
               class=""
               tabindex="-1"
             >
-              Réglages
+              <%= gettext("Settings") %>
             </.link>
 
             <.link
@@ -58,7 +58,7 @@
             class=""
             tabindex="-1"
           >
-            Se déconnecter
+          <%= gettext("Log out") %>
           </.link>
 
           <% else %>
@@ -75,7 +75,7 @@
             class=""
             tabindex="-1"
           >
-            S'identifier
+          <%= gettext("Sign in") %>
           </.link>
           <% end %>
         </div>
