--- a/lib/tasker_web/controllers/page_html/home.html.heex
+++ b/lib/tasker_web/controllers/page_html/home.html.heex
@@ -3,6 +3,8 @@
 # TODO
 #   * mettre en forme
 %>
+<h2><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h2>
+
 <section id="main">
   <p class="fleche-droite">Un paragraphe qui doit avoir une flèche à dorite</p>
   <p>A fresh approach to managing tasks.</p>
