--- a/lib/tasker_web/controllers/page_html/main.html.heex
+++ b/lib/tasker_web/controllers/page_html/main.html.heex
@@ -1,3 +1,5 @@
+<h2><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h2>
+
 <div>La page principale. C’est ici qu’est affichée la tâche courante à faire</div>
 
 <div class="current-task">
