--- a/lib/tasker_web/controllers/page_html/main.html.heex
+++ b/lib/tasker_web/controllers/page_html/main.html.heex
@@ -6,7 +6,15 @@
   [LA TÂCHE COURANTE]
 </div>
 
-<div class="main-buttons">
+<.link
+  href={~p"/tasks/new"}
+  >Créer une nouvelle tâche</.link>
+
+<.link
+  href={~p"/task_statut/new"}
+  >Créer un statut de tâche</.link>
+
+<div class="main-buttons mt-20">
   <label>Boutons principaux</label>
   [COMMENCER(/FINIR/INTERROMPRE)] [REPOUSSER] 
 </div>
